--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "kanban",
+  "name": "holo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-router-dom": "^5.3.2",
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.17",
+    "holodex.js": "^1.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.21.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
+    "save": "^2.4.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
@@ -23,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +57,8 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
+    "gh-pages": "^3.2.3"
   }
 }
