--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.17",
+    "firebase": "^8.8.0",
     "holodex.js": "^1.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
