--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.0",
