--- a/package.json
+++ b/package.json
@@ -64,5 +64,5 @@
     "@types/react-helmet": "^6.1.4",
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://mandu0505.github.io/holoschedule"
+  "homepage": "http://mandu0505.github.io/holoSchedule"
 }
