--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
     "gh-pages": "^3.2.3"
-  }
+  },
+  "homepage": "http://mandu0505.github.io/holoschedule"
 }
