--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.34.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "recoil": "^0.5.2",
     "save": "^2.4.0",
     "styled-components": "^5.3.3",
